--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=spring-bookmarks-api
+spring.docker.compose.lifecycle-management=start_only
+
+spring.datasource.url=jdbc:postgresql://localhost:15432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
