--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=spring-bookmarks-api
+
+spring.docker.compose.enabled=true
 spring.docker.compose.lifecycle-management=start_only
 
 spring.datasource.url=jdbc:postgresql://localhost:15432/postgres
